HomeController Unit tests

--- a/ChatApp/Views/Home/ChatView.cshtml
+++ b/ChatApp/Views/Home/ChatView.cshtml
@@ -25,6 +25,6 @@
 
 @section scripts {
 <script src="~/Scripts/jquery.signalR-2.4.0.js"></script>
-<script src"~/signalr/hubs"></script>
+<script src="~/signalr/hubs"></script>
 <script src="~/app/app.js"></script>
     }
